--- a/views/forums.handlebars
+++ b/views/forums.handlebars
@@ -9,15 +9,13 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/public/assets/css/reset.css">
-    <link rel="stylesheet" href="/public/assets/css/style.css">
-
+    <link rel="stylesheet" href="/assets/css/reset.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
   </head>
   <body>
-    <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
-    
-    <script src="/public/assets/js/app.js" async defer></script>
-  </body>
+    <p id='test'> hi </p>
+    </body>
+    <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" 
+				crossorigin="anonymous"></script>		
+<script src='/public/assets/js/app.js'></script>
 </html>
