--- a/views/work.handlebars
+++ b/views/work.handlebars
@@ -9,11 +9,13 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/public/assets/css/reset.css">
-    <link rel="stylesheet" href="/public/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/reset.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
   </head>
   <body>
     <p id='test'> hi </p>
-    <script src="/public/assets/js/app.js" async defer></script>
     </body>
+    <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" 
+				crossorigin="anonymous"></script>		
+<script src='/public/assets/js/app.js'></script>
 </html>
