--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,40 @@
-#test{
-  color: green;
+/* Navbar Properties */
+.navbar-fixed{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 50px;
+  background-color: #BEBEBE;
 }
+.logo{
+  margin: 10px 10px 10px 15px;
+   background: red;
+   padding: 5px;
+   background: linear-gradient(red, yellow, green);
+   width: 60px;
+   height: 25px;
+   color: white;
+}
+.navbar-right{
+  position: fixed;
+  top: 10px;
+  right: 5px;/*pixels away from the right of the navbar*/
+}
+
+.title{
+  display: inline-block;
+  margin: 5px;
+}
+
+/* Sticky Footer Setup */
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+main {
+  flex: 1 0 auto;
+}
+    
