all the hbs needed, now just adding static content

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="/assets/css/reset.css">
-		<link type="text/css" rel="stylesheet" href="/assets/css/materialize.min.css"  media="screen,projection"/>
+		<link type="text/css" rel="stylesheet" href="/assets/css/materialize.css"  media="screen,projection"/>
 		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -17,7 +17,8 @@
 			<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" 
 				crossorigin="anonymous"></script>		
 		<!--JavaScript at end of body for optimized loading-->
-      <script type="text/javascript" src="js/materialize.min.js"></script>
-			<script src='/public/assets/js/app.js'></script>
+      <script type="text/javascript" src="/assets/js/materialize
+			.js"></script>
+			<script src='/assets/js/app.js'></script>
 	</body>
 </HTML>
