--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7,6 +7,11 @@
   height: 50px;
   background-color: #BEBEBE;
 }
+
+nav ul li a{
+  color: white;
+}  
+
 .logo{
   margin: 10px 10px 10px 15px;
    background: red;
@@ -18,13 +23,25 @@
 }
 .navbar-right{
   position: fixed;
-  top: 10px;
   right: 5px;/*pixels away from the right of the navbar*/
 }
-
 .title{
   display: inline-block;
-  margin: 5px;
+}
+
+/* Carousel-items */
+.carousel-item>img {
+  width: 100%;
+  height:100%;
+}
+
+.textLand {
+  margin-top: 20%;
+  margin-bottom: 20%;
+  font-size: 2em;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  sans-serif;
 }
 
 /* Sticky Footer Setup */
@@ -32,9 +49,31 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
+  font-family: 'Helvetica Neue', 'Helvetica', 'Apple SD Gothic Neo', 'NanumBarunGothic', 'Malgun Gothic', dotum, 'Lucida Grande', sans-serif;
 }
 
 main {
   flex: 1 0 auto;
 }
+
+/* Images */
+.overhead-image {
+  position: relative;
+  margin-top: 3%;
+  margin-bottom: auto;
+  width: 100%;
+  height:100%;
+}
     
+/* Main Content Text */
+
+.main-content {
+  max-width: 85%;
+  margin: auto;
+}
+
+.main-text {
+  line-height: 2em;
+  margin-bottom: 2em;
+}
+
