--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -7,7 +7,7 @@
         <li><a class='white-text' href="/seoul">율현 서울사무소</a></li>
         <li><a class='white-text' href="/atlanta">율현 아틀란타 사무소</a></li>
       </ul>
-            <!-- Dropdown Structure -->
+      <!-- Dropdown Structure -->
       <ul id="dropdown2" class="dropdown-content #757575 grey darken-1">
         <li><a class='white-text' href="/intro">Intro</a></li>
         <li><a class='white-text' href="/contract">Contract</a></li>
@@ -39,19 +39,14 @@
 
 {{!-- Main body Content Wrapped in Carousel --}}
 <main>
-  <div class='full-slider'>
-    <div class='carousel carousel-slider'  data-indictaors='true'>
-      <a href='#imgOne' class='carousel-item'><img src='/assets/images/Background/panel_one.jpg'></a>
-        <div class='carousel-fixed-item center textLand'>
-            <p class='white-text'>해결하여야 할 법적 문제가 한국에서 발생한 것인가요?
-            <br></br>
-            법무법인 율현 미주 지점은 미국에 계신 한국동포들을 위하여 한국법 자문과 소송을 전문으로 하는 법률사무소입니다.
-            <br></br> 
-            다양한 경험과 탁월한 능력을 갖춘 율현의 변호사가 고민하고 계신 문제를 빠르고 정확하게 해결해드리겠습니다.</h2>
-        </div>
-      <a href='#imgTwo' class='carousel-item'><img src='/assets/images/Background/nature_one.jpg'></a>
-      <a href='#imgThree' class='carousel-item'><img src='/assets/images/Background/nature_three.jpg'></a>
-    </div>
+  <img src='/assets/images/Background/panorama_one.jpg' class='overhead-image' />
+  <div class='main-content'>
+    <h2>율현 아틀란타 사무소</h2>
+    <p class='main-text'>
+      Law Office of Yoolhyun, Atlanta는 한국과 미국 간에 발생하는 섭외적 법률 문제를 적극적으로 해결하기 위한 목적으로 Atlanta에 설립된 Law Office of Yoolhyun의 미국 지사입니다.
+       <br>미국에 계시면서 한국에서 발생하는 법률적 문제를 해결하지 못해 많은 어려움을 겪고 계시는 동포 여러분들을 위하여 미국과 한국 양쪽의 법률지식을 모두 갖춘 변호사가 신속하고 정확하게 문제를
+        해결해드립니다.
+    </p>
   </div>
 </main>
 
