--- a/views/consultation.handlebars
+++ b/views/consultation.handlebars
@@ -56,7 +56,7 @@
 </main>
 
 {{!-- Footer --}}
-<footer class="page-footer #757575 grey darken-1">
+<footer class="page-footer #eceff1 blue-grey lighten-5">
   <div class="container">
     <div class="row">
       <div class="col s5">
@@ -64,7 +64,6 @@
       </div>
       <div class="col s5">
         <h5 class="white-text"><a class="grey-text" href="#!">Contact</a></h5>
-
       </div>
       <div class="col s2">
         <h5 class="white-text"><a class="grey-text" href="#!">Resources</a></h5>
