--- a/views/office/seoul.handlebars
+++ b/views/office/seoul.handlebars
@@ -7,7 +7,7 @@
         <li><a class='white-text' href="/seoul">율현 서울사무소</a></li>
         <li><a class='white-text' href="/atlanta">율현 아틀란타 사무소</a></li>
       </ul>
-            <!-- Dropdown Structure -->
+      <!-- Dropdown Structure -->
       <ul id="dropdown2" class="dropdown-content #757575 grey darken-1">
         <li><a class='white-text' href="/intro">Intro</a></li>
         <li><a class='white-text' href="/contract">Contract</a></li>
@@ -39,19 +39,15 @@
 
 {{!-- Main body Content Wrapped in Carousel --}}
 <main>
-  <div class='full-slider'>
-    <div class='carousel carousel-slider'  data-indictaors='true'>
-      <a href='#imgOne' class='carousel-item'><img src='/assets/images/Background/panel_one.jpg'></a>
-        <div class='carousel-fixed-item center textLand'>
-            <p class='white-text'>해결하여야 할 법적 문제가 한국에서 발생한 것인가요?
-            <br></br>
-            법무법인 율현 미주 지점은 미국에 계신 한국동포들을 위하여 한국법 자문과 소송을 전문으로 하는 법률사무소입니다.
-            <br></br> 
-            다양한 경험과 탁월한 능력을 갖춘 율현의 변호사가 고민하고 계신 문제를 빠르고 정확하게 해결해드리겠습니다.</h2>
-        </div>
-      <a href='#imgTwo' class='carousel-item'><img src='/assets/images/Background/nature_one.jpg'></a>
-      <a href='#imgThree' class='carousel-item'><img src='/assets/images/Background/nature_three.jpg'></a>
-    </div>
+  <img src='/assets/images/Background/city_three.jpg' class='overhead-image' />
+  <div class='main-content'>
+    <h2>율현 서울사무소</h2>
+    <p class='main-text'>“법을 통하여 진리를 밝힌다(以律求賢)”는 이념 하에 항상 고객과 공감하고자 노력하는 Law Office of Yoolhyun, Seoul은 2005년 서울에서 윤배경
+      변호사를 대표변호사로 하여 설립된 Law Firm입니다.<br>
+      민/형사와 같은 일반 사건을 처리하고 있음은 물론이고 금융, 조세, 건설, 해상보험과 같은 전문적인 영역에도 탁월한 지식과 다양한 경험을 바탕으로 법률자문을 수행하고 있습니다.
+      <br></br>
+      <a href='http://yoolhyun.com/' target='_blank' rel="noopener noreferrer">(www.yoolhyun.com) </a>
+    </p>
   </div>
 </main>
 
