--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -41,12 +41,41 @@
 <main>
   <img src='/assets/images/Background/panorama_one.jpg' class='overhead-image' />
   <div class='main-content'>
-    <h2>율현 아틀란타 사무소</h2>
-    <p class='main-text'>
-      Law Office of Yoolhyun, Atlanta는 한국과 미국 간에 발생하는 섭외적 법률 문제를 적극적으로 해결하기 위한 목적으로 Atlanta에 설립된 Law Office of Yoolhyun의 미국 지사입니다.
-       <br>미국에 계시면서 한국에서 발생하는 법률적 문제를 해결하지 못해 많은 어려움을 겪고 계시는 동포 여러분들을 위하여 미국과 한국 양쪽의 법률지식을 모두 갖춘 변호사가 신속하고 정확하게 문제를
-        해결해드립니다.
-    </p>
+    <div class='row'>
+      <h2>변호사 이력서</h2>
+      <div class='col s8 resume-text'>
+        <ul>
+          <li>◁ 서울대학교 법학대학교, 법학대학원 졸업</li>
+          <li>◁ 국립해양대학교 법학대학원 박사과정 수료</li>
+          <li>◁ University of Denver, School of Law (L.L.M)</li>
+          <li>◁ 국제자금세탁전문가협회(Association of Certified Anti-Money Laundering Specialist) 회원</li>
+          <li>◁ 김장 & 리 (Kim, Chang & Lee) 법률사무소</li>
+          <li>◁ 진 리 (Jin & Lee) 법률사무소</li>
+          <li>◁ IBC Law Group</li>
+          <li>◁ 뉴욕 Daniel Kim 법률사무소</li>
+          <li>◁ 법무법인 율현 대표변호사</li>
+          <li>◁ 농업협동조합 중앙회, 농협자산관리, 농협손해보험 고문변호사</li>
+          <li>◁ 대림산업주식회사 고문변호사</li>
+          <li>◁ 한국자산관리공사 고문변호사</li>
+          <li>◁ 도드람, 양농축산업 협동조합 고문변호사</li>
+          <li>◁ 국제자금세탁전문가협회(Association of Certified Anti-Money Laundering Specialist) 회원</li>
+          <li>◁ 인천지방법원 파산부 –인천지방법원 2006책 선박소유자등의 책임제한사건의 관리인으로 선임</li>
+          <li>◁ 지식경제부장관 – 전자거래분쟁조정 위원회 위원으로 위촉</li>
+          <li>◁ 대한상사중재원 중재인으로 위촉</li>
+          <li>◁ 대한변호사협회 금융소비자보호특별위원회 위원 & 회지 편집위원회위원으로 위촉</li>
+          <li>◁ 대한주택보증주식회사 열린 공기업 위원회 위원 & 정보공개심의회의 위원으로 위촉</li>
+          <li>◁ (사)한국해법학회 이사로 위촉</li>
+          <li>◁ 농협대학교, 대림산업, 의료보험조합, 금융연수원, 중앙대학교 법학대학원 강사</li>
+          <li>◁ 세법연구회 간사</li>
+          <li>◁ ‘법률신문’, ‘대한변협신문’, ‘인권과 정의’, ‘시민과 변호사’, ‘시사법률’ : 편집위원 및 칼럼리스트</li>
+          <li>◁ 서울변호사회(1996) & 대한변호사회(2009) 공로상</li>
+        </ul>
+
+      </div>
+      <div class='col s4'>
+          <img src='/assets/images/Lawyer/윤배경사진1.jpg' class='profile-image' />
+      </div>
+    </div>
   </div>
 </main>
 
