--- a/views/resources/resources.handlebars
+++ b/views/resources/resources.handlebars
@@ -39,42 +39,22 @@
 
 {{!-- Main body Content Wrapped in Carousel --}}
 <main>
-  <img src='/assets/images/Background/panorama_one.jpg' class='overhead-image' />
-  <div class='main-content'>
-    <div class='row'>
-      <h2>변호사 이력서</h2>
-      <div class='col s8 resume-text'>
-        <ul>
-          <li>◁ 서울대학교 법학대학교, 법학대학원 졸업</li>
-          <li>◁ 국립해양대학교 법학대학원 박사과정 수료</li>
-          <li>◁ University of Denver, School of Law (L.L.M)</li>
-          <li>◁ 국제자금세탁전문가협회(Association of Certified Anti-Money Laundering Specialist) 회원</li>
-          <li>◁ 김장 & 리 (Kim, Chang & Lee) 법률사무소</li>
-          <li>◁ 진 리 (Jin & Lee) 법률사무소</li>
-          <li>◁ IBC Law Group</li>
-          <li>◁ 뉴욕 Daniel Kim 법률사무소</li>
-          <li>◁ 법무법인 율현 대표변호사</li>
-          <li>◁ 농업협동조합 중앙회, 농협자산관리, 농협손해보험 고문변호사</li>
-          <li>◁ 대림산업주식회사 고문변호사</li>
-          <li>◁ 한국자산관리공사 고문변호사</li>
-          <li>◁ 도드람, 양농축산업 협동조합 고문변호사</li>
-          <li>◁ 국제자금세탁전문가협회(Association of Certified Anti-Money Laundering Specialist) 회원</li>
-          <li>◁ 인천지방법원 파산부 –인천지방법원 2006책 선박소유자등의 책임제한사건의 관리인으로 선임</li>
-          <li>◁ 지식경제부장관 – 전자거래분쟁조정 위원회 위원으로 위촉</li>
-          <li>◁ 대한상사중재원 중재인으로 위촉</li>
-          <li>◁ 대한변호사협회 금융소비자보호특별위원회 위원 & 회지 편집위원회위원으로 위촉</li>
-          <li>◁ 대한주택보증주식회사 열린 공기업 위원회 위원 & 정보공개심의회의 위원으로 위촉</li>
-          <li>◁ (사)한국해법학회 이사로 위촉</li>
-          <li>◁ 농협대학교, 대림산업, 의료보험조합, 금융연수원, 중앙대학교 법학대학원 강사</li>
-          <li>◁ 세법연구회 간사</li>
-          <li>◁ ‘법률신문’, ‘대한변협신문’, ‘인권과 정의’, ‘시민과 변호사’, ‘시사법률’ : 편집위원 및 칼럼리스트</li>
-          <li>◁ 서울변호사회(1996) & 대한변호사회(2009) 공로상</li>
-        </ul>
+    <img src='/assets/images/Background/paper_one.jpg' class='overhead-image-resources' />
+  <div class="container">
+    <h2>업무분야</h2>
+    <div class="row">
+      <!-- Dropdown Trigger -->
+      <a class='dropdown-trigger btn' href='#' data-target='dropdown4'>Drop Me!</a>
 
-      </div>
-      <div class='col s4'>
-          <img src='/assets/images/Lawyer/윤배경사진1.jpg' class='profile-image' />
-      </div>
+      <!-- Dropdown Structure -->
+      <ul id='dropdown1' class='dropdown-content'>
+        <li><a href="#!">one</a></li>
+        <li><a href="#!">two</a></li>
+        <li class="divider" tabindex="-1"></li>
+        <li><a href="#!">three</a></li>
+        <li><a href="#!"><i class="material-icons">view_module</i>four</a></li>
+        <li><a href="#!"><i class="material-icons">cloud</i>five</a></li>
+      </ul>
     </div>
   </div>
 </main>
