--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -73,6 +73,14 @@ main {
   height:400px;
 }
 
+.overhead-image-resources {
+  position: relative;
+  margin-top: 3%;
+  margin-bottom: auto;
+  width: 100%;
+  height: 450px;
+}
+
 .profile-image {
   margin-top: -30%;
   width: 130%;
