--- a/views/legal/contract.handlebars
+++ b/views/legal/contract.handlebars
@@ -24,7 +24,7 @@
             <li><a class="dropdown-trigger" data-target="dropdown1">법률사무소 Law Office</a></li>
             <li><a href="/about" class='title'>윤배경변호사 Lawyer Yoon</a></li>
             <li><a class="dropdown-trigger" data-target="dropdown2">업무분야 Practice Areas</a></li>
-            <li><a href="#" class='title'>법률자료실 Resources</a></li>
+            <li><a href="/resources" class='title'>법률자료실 Resources</a></li>
             <li><a href="/consultation" class='title'>상담 및 의뢰Consultation</a></li>
           </ul>
           <ul id="nav-mobile" class="sidenav">
