new frame style

--- a/views/resources/resources.handlebars
+++ b/views/resources/resources.handlebars
@@ -39,22 +39,54 @@
 
 {{!-- Main body Content Wrapped in Carousel --}}
 <main>
-    <img src='/assets/images/Background/paper_one.jpg' class='overhead-image-resources' />
+  <img src='/assets/images/Background/paper_one.jpg' class='overhead-image-resources' />
   <div class="container">
     <h2>업무분야</h2>
-    <div class="row">
-      <!-- Dropdown Trigger -->
-      <a class='dropdown-trigger btn' href='#' data-target='dropdown4'>Drop Me!</a>
+    <div class="col s8 m6">
+      <div class="card blue-grey darken-1">
+        <div class="card-content white-text">
+          <span class="card-title">Card Title</span>
+          <p>I am a very simple card. I am good at containing small bits of information.
+            I am convenient because I require little markup to use effectively.</p>
+        </div>
+        <button class="collapsible">Open Collapsible</button>
+        <div class="resources-content">
+          <h3>Q: 한국의 수입업자를 상대로 물품대금을 받기 위한 소송을 미국에서 제기할 수 있을까요?</h3>
+          <li>본인은 캘리포니아의 LA에서 회사를 운영하고 있습니다. 본인의 회사는 천연 유기농 건강식품을 제조 수출하는 영국 법인의 agent로 일하고 있는데 2016년 8월경 LA에서 한국의 홈쇼핑에
+            제품을 납품하고 판매하는 한국 회사(수입업자)와 위 건강식품을 독점 공급하는 계약을 체결하였습니다. 이에 따라 본인의 회사가 영국 법인으로부터 제품을 구입하여 그 제품을 한국의 수입업자에
+            공급하였는데 한국 법인은 계약금만 지급하고 아직까지 그 대금을 지급하지 않고 있습니다. 한국의 수입업자는 위 건강식품을 홈쇼핑에서 판매를 하였으나 크게 호응을 얻지 못 하여 재고만 쌓이는
+            상태라는 것입니다. 결국 본인의 회사는 상당한 손해를 보고 있습니다. 한국의 수입업자를 상대로 물품대금을 받기 위한 소송을 미국에서 제기할 수 있을까요?</li>
+            <li>가. 전형적인 국제 상사 분쟁의 하나로 보입니다.</li>
+          <li>나. 생각컨대, 귀하가 한국의 수입업자를 상대로 물품대금의 지급지체를 이유로 독점공급계약의 해지하는 통지를 일단 해 두어야 할 것입니다. 이러한 해지절차를 하지 않은 상태에서 귀사가 다른
+            한국의
+            업체와 거래관계를 맺을 경우 독점공급계약 위반의 항의를 받을 경우가 있을 수 있기 때문입니다.</li>
+          <li>다. 귀하가 미국에서 소송을 제기하는 것이 가능한지 여부를 살펴보겠습니다. 귀하의 법인과 수입업자 사이에 분쟁해결 조항이 별도로 없다면, 귀하의 법인은 미국의 캘리포니아 주에 한국의
+            수입업자를
+            상대로 지급받지 못 한 물품대금을 지급하여 달라는 취지의 소송을 제기할 가능성이 있습니다. 독공급계약을 미국에서 체결하고 물품의 수출을 귀하의 법인에서 주도적으로 주선하였을 것이기 때문입니다.
+            즉, 계약의 체결, 물품의 공급 등 여러 상사 활동이 미국에서 이루어지는 등 사건이나 증거의 연결점이 미국에 적지 않게 존재하기 때문입니다.</li>
+          <li>라. 다만, 미국에서 소송을 제기할 경우 귀하의 법인은 한국의 수입업자에게 미국에서 물품대금의 지급을 구하는 민사소송이 제기되었음을 알려야만 합니다. 한국의 수입업자에게 미국에서 제기된
+            소송의
+            존재를 알려주지 않으면 미국에서의 소송에서 승소하더라도 한국에 있는 수입업자에게 강제집행을 할 수 없기 때문입니다(미국 법정에서 승소할 경우 수입업자의 미국 내 재산에 대하여만 강제집행이 가능할
+            뿐입니다).</li>
+          <li>마. 그런데 한국에 있는 수입업자의 주소지로 미국에서 소송이 제기된 사실을 알리는 절차가 다소 까다롭고 시간도 적지 않게 소요됩니다(통상적으로 6개월 이상이 걸립니다). 만약 이러한 소송
+            진행의
+            송달절차가 제대로 갖추어지지 않을 경우 향후 한국의 법인이 소재한 한국에서 강제집행하기가 곤란할 여지가 있습니다.</li>
+          <li>바. 그런 점에 비추어 귀하가 직접 한국에 있는 변호사와 상담하여 한국의 변호사를 통하여 한국의 수입업자를 상대로 민사소송을 제기하는 것이 보다 바람직하다고 사료됩니다. 이럴 경우 한국의
+            변호사를 통하여 한국 변호사의 명의로 한국의 수입업자에게 미지급 물품 대금의 지급을 요구하는 경고장을 보내거나 수입업자의 재산에 대하여 가압류 등의 조치를 취하는 것을 권해 드리고 싶습니다.
+            이럴 경우 굳이 소송까지 가지 않더라도 수입업자의 양보를 이끌어 낼 수 있을 가능성이 큽니다.</li>
+        </div>
 
-      <!-- Dropdown Structure -->
-      <ul id='dropdown1' class='dropdown-content'>
-        <li><a href="#!">one</a></li>
-        <li><a href="#!">two</a></li>
-        <li class="divider" tabindex="-1"></li>
-        <li><a href="#!">three</a></li>
-        <li><a href="#!"><i class="material-icons">view_module</i>four</a></li>
-        <li><a href="#!"><i class="material-icons">cloud</i>five</a></li>
-      </ul>
+         <button class="collapsible">Open Collapsible</button>
+        <div class="resources-content">
+          <li>Q: 한국에서의 상속문제로 미국에 있는 재산에 대한 금융기관의 집행이 가능한지요?</li>
+          <li>한국에 생전의 부친으로부터 물려받은 선산과 논밭이 저의 명의로 되어있습니다. 최근 한국에 있는 동생이 상당한 부채를 남기고 사망하였습니다. 그리고 동생이 남긴 채무를 갚을 수 없어 제수씨와 자녀들은 모두 상속포기를 하였습니다. 이 경우 미국에 있는 저의 재산에 대하여 한국 금융기관의 집행이 가능한지요?</li>
+          <li>국제사법적으로 판단하면 상속관계는 본인의 본국법이 준거법이 됩니다. 따라서, 순수하게 한국의 법에 따르게 됩니다.
+              귀하의 동생(피상속인)이 사망하면서 동생의 채무는 그의 처와 자녀들에게 상속이 됩니다. 이런 까닭에 귀하의 처제와 자녀들이 상속포기를 한 것으로 보입니다. 문제는 한국의 민법에 따르면 상속포기를 하게 되면 다음 순위의 상속인이 피상속인을 상속하게 됩니다. 이럴 경우 귀하는 처제와 그 자녀들이 상속을 포기함에 따라 귀하는 예기치 않게 동생의 채무를 상속한 상태가 되었습니다. 
+              금융기관은 선순위 상속인(피상속인의 처와 자녀)들이 상속을 포기함에 따라 귀하가 동생을 상속한 유일한 상속인이 된 것임을 알게 되었기 때문에 한국에 있는 귀하 명의의 부동산에 대하여 가압류 등의 조치를 취할 수 있습니다. 또한 귀하를 상대로 채무금 지급 소송을 할 수도 있습니다.
+              순수한 국제사법 이론에 따르면 한국의 금융기관은 미국에 있는 귀하 명의의 사업이나 부동산(주택)에 대하여도 동생의 상속자임을 이유로 채무금의 소송을 제기할 수 있습니다. 미국법과는 상관 없이 한국의 상속법(민법)에 따라 귀하가 동생의 상속인이 되기 때문입니다.
+              그렇다면, 귀하는 한국법원에 동생에 대한 상속포기 또는 한정승인(상속인으로부터 받은 재산의 한도 내에서 상속 채무를 갚겠다는 의미)을 신청하는 것을 권유 드립니다. 통상 자신이 상속권자가 된 사실을 안 날로부터 3개월 이내에 상속포기 또는 한정승인을 하여야 하므로 그 기간을 준수하실 것을 권합니다.</li>
+        </div>
+      </div>
     </div>
   </div>
 </main>
