--- a/views/consultation.handlebars
+++ b/views/consultation.handlebars
@@ -17,7 +17,7 @@
         <li><a class='white-text' href="/taxes">Taxes</a></li>
 
       </ul>
-      <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
+      <div class="nav-wrapper container"><a id="logo-container" href="/" class="brand-logo">Yoolhyun</a>
         <div class='navbar-right'>
           <ul class="right hide-on-med-and-down">
             <li><a href="/" class='title'>Home</a></li>
@@ -45,7 +45,7 @@
         <div class="col m10 offset-m1 s12">
             <h2 class="center-align">For Consultation</h2>
             <div class="row">
-                <form class="col s12">
+                <form class="col s12" action='/consultation' method='post'>
                     <div class="row">
                         <div class="input-field col m6 s12">
                             <input id="first_name" type="text" class="validate">
@@ -71,7 +71,7 @@
                     </div>
                     <div class="row">
                         <div class="col m12">
-                         <p class="right-align"><button class="btn btn-large waves-effect waves-light" type="button" name="action">Send Message</button></p>
+                         <p class="right-align emailSubmit"><button class="btn btn-large waves-effect waves-light" type="button" name="action">Send Message</button></p>
                         </div>
                     </div>
                 </form>
