--- a/views/legal/intro.handlebars
+++ b/views/legal/intro.handlebars
@@ -17,7 +17,7 @@
         <li><a class='white-text' href="/taxes">Taxes</a></li>
 
       </ul>
-      <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
+      <div class="nav-wrapper container"><a id="logo-container" href="/" class="brand-logo">Yoolhyun</a>
         <div class='navbar-right'>
           <ul class="right hide-on-med-and-down">
             <li><a href="/" class='title'>Home</a></li>
