changes after discussion

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -43,13 +43,13 @@
     <div class='carousel carousel-slider'  data-indictaors='true'>
       <a href='#imgOne' class='carousel-item'><img src='/assets/images/Background/panel_one.jpg'></a>
         <div class='carousel-fixed-item center textLand'>
-            <p class='white-text'>해결하여야 할 법적 문제가 한국에서 발생한 것인가요?
+            <h1>해결하여야 할 법적 문제가 한국에서 발생한 것인가요?</h1>
             <br></br>
             법무법인 율현 미주 지점은 미국에 계신 한국동포들을 위하여 한국법 자문과 소송을 전문으로 하는 법률사무소입니다.
             <br></br> 
             다양한 경험과 탁월한 능력을 갖춘 율현의 변호사가 고민하고 계신 문제를 빠르고 정확하게 해결해드리겠습니다.</h2>
         </div>
-      <a href='#imgTwo' class='carousel-item'><img src='/assets/images/Background/nature_one.jpg'></a>
+      {{!-- <a href='#imgTwo' class='carousel-item'><img src='/assets/images/Background/nature_one.jpg'></a> --}}
       <a href='#imgThree' class='carousel-item'><img src='/assets/images/Background/nature_three.jpg'></a>
     </div>
   </div>
