--- a/views/legal/criminal.handlebars
+++ b/views/legal/criminal.handlebars
@@ -46,7 +46,8 @@
       <div class='col s12 main-text'>
         <p>
           미국에 체류하시는 동포 중에 한국에서 발생한 형사 문제로 인하여 심리적 불안을 호소하시는 분이 적지 아니합니다.
-          자신도 모르는 사이에 한국 수사 당국에 의하여 ‘기소중지자’로 수배되어 있는 경우도 있습니다.
+          자신도 모르는 사이에 한국 수사 당국에</p>
+        <p> 의하여 ‘기소중지자’로 수배되어 있는 경우도 있습니다.
           그리하여 한국으로 입국할 때 긴급 체포되거나, 다시 한국으로 출국할 때 출국이 거부되는 사례도 발생하고 있습니다.
           따라서, 이에 대한 정보를 사전에 확인하는 한편, 그 대응방안을 강구하는 것이 필요합니다.
         </p>
