--- a/views/legal/family.handlebars
+++ b/views/legal/family.handlebars
@@ -46,7 +46,8 @@
       <div class='col s12 main-text'>
         <p>
           국제사법적 분석이 많이 시도되는 부분 중 하나입니다. 기본적으로는 당사자의 본국법이 우선하지만,
-          부부 각자의 국적이 다르거나 현재 거주하고 있는 곳이 서로 다를 경우 역시 각자 거주하는 곳에서 이혼의 소송을 제기할 수 있는지,
+          부부 각자의 국적이 다르거나 현재 거주하고 있는 곳이</p>
+        <p> 서로 다를 경우 역시 각자 거주하는 곳에서 이혼의 소송을 제기할 수 있는지,
           이혼할 경우 어느 나라의 법을 준거법으로 하여 결정할 것인지, 이혼 시 재산분할, 위자료,
           자녀 양육을 위한 조치 등에 대한 각국의 입장이 어떠한지에 대한 문의가 지속적으로 제기되고 있습니다.
         </p>
