--- a/views/resources/resources.handlebars
+++ b/views/resources/resources.handlebars
@@ -39,7 +39,7 @@
 
 {{!-- Main body Content Wrapped in Carousel --}}
 <main>
-  <img src='/assets/images/Background/paper_one.jpg' class='overhead-image-resources' />
+  <img src='/assets/images/Background/nature_one.jpg' class='overhead-image-resources' />
   <div class="container">
     <h2>업무분야</h2>
     <div class="col s8 m6">
@@ -47,8 +47,8 @@
         <div class="card-content white-text">
           <span class="card-title">국제상사 분쟁과 관련된 질문</span>
         </div>
-        <button class="collapsible">한국의 수입어자를 상대로 물품대금을 받기 위한 소송을 미국에서 제기할수 있을까요?</button>
-        <div class="resources-content">
+        <button class="collapsible">한국의 수입업자를 상대로 물품대금을 받기 위한 소송을 미국에서 제기할수 있을까요?</button>
+        <div class="content">
           <p class='resources-p'><b>질의:</b></p>
            <p class='resources-p'>
             본인은 캘리포니아의 LA에서 회사를 운영하고 있습니다. 본인의 회사는 천연 유기농 건강식품을 제조 수출하는 영국 법인의 agent로 일하고 있는데 2016년 8월경 LA에서 한국의 홈쇼핑에
@@ -80,7 +80,7 @@
           <span class="card-title">상속 문제와 관련된 질문</span>
         </div>
         <button class="collapsible">한국에서의 상속문제로 미국에 있는 재산에 대한 금융기관의 집행이 가능한지요?</button>
-        <div class="resources-content">
+        <div class="content">
           <p class='resources-p'><b>질의:</b></p>
           <p class='resources-p'>한국에 생전의 부친으로부터 물려받은 선산과 논밭이 저의 명의로 되어있습니다. 최근 한국에 있는 동생이 상당한 부채를 남기고 사망하였습니다. 그리고 동생이 남긴 채무를 갚을 수 없어 제수씨와
             자녀들은 모두 상속포기를 하였습니다. 이 경우 미국에 있는 저의 재산에 대하여 한국 금융기관의 집행이 가능한지요? </p>
@@ -98,7 +98,7 @@
             사실을 안 날로부터 3개월 이내에 상속포기 또는 한정승인을 하여야 하므로 그 기간을 준수하실 것을 권합니다.</p>
         </div>
          <button class="collapsible">한국에서 상속받은 재산에 대한 유류분 청구는 어떻게 하여야 하나요?</button>
-        <div class="resources-content">
+        <div class="content">
           <p class='resources-p'><b>질의:</b></p>
           <p class='resources-p'>본인은 현재 미국 캘리포니아에서 거주하고 있습니다. 본인은 약 12년 전에 제 어머니로부터 부동산 (상가건물)을 증여 받았는데, 2달 전에 어머니께서 돌아가신 후, 저희 누님들이 유류분 반환을 구두로 요청하고 있습니다. 
             저는 전 1남 5녀 중 막내입니다. 그 중 4분 누님들은 저와 대화로써 합의점을 찾아보려 하는데, 나머지 한 누님이 벌써 변호사를 선임하고 소송절차를 밟고 있는 중이어서, 저도 변호사를 선임해야 할 입장입니다. 이 누님이 병원에서 태어나자 마자,
@@ -123,7 +123,7 @@
           사. 유류분권자(누님들)는 유류분 부족을 안 날로부터 1년 이내에 유류분 반환의 소를 제기하여야 하므로 위 두 소송을 함께 진행할 것으로 보입니다.</p>
         </div>
         <button class="collapsible">미국 영주권자 신분인 부모로부터 미국시민권자인 자녀가 한국에 있는 부동산을 상속받을시 고려할 점은요?</button>
-        <div class="resources-content">
+        <div class="content">
           <p class='resources-p'><b>답변:</b></p>
           <p class='resources-p'>
            가. 상속은 피상속인이나 상속인의 국적과 무관합니다. 다만 세금 납부문제만 차이가 있습니다. 그리고 세금은 상속인과 피상속인의 국적에 따라 해당 국적의 법 적용을 받습니다. </p>
@@ -133,7 +133,7 @@
            다. 이 경우 미국시민권자인 자녀는 한국의 비거주자이므로 한국 재산에 대해 상속세를 납부하여야 합니다.  그런데 미국은 피상속인이 세금을 냅니다. 피상속인이 미국의 거주자이면 전 세계 모든 자산에 대해 상속 및 증여세를 내야하고 만약 비거주자이면 미국에 있는 유형자산(tangible asset)을 상속.증여하는 경우에만 세금을 냅니다. 미국의 시민권자나 세법상 거주자(영주권자, 실제 체류기간 충족한 자) 는 전세계 모든 소득을 미국에 신고해야 합니다. </p>
         </div>
                 <button class="collapsible">미 시민권자의 한국내 상속재산 포기절차에 대해 문의드립니다.</button>
-        <div class="resources-content">
+        <div class="content">
           <p class='resources-p'><b>답변:</b></p>
           <p class='resources-p'>
             한국 대법원사이트에서 “미 시민권자의 상속포기 위임서”를 다운받아서 서명날인한 후 공증을 받아 직접 법원의 관련부서에 제출하시면 됩니다.           
@@ -148,7 +148,7 @@
           <span class="card-title">이혼 소송과 관련된 질문</span>
         </div>
         <button class="collapsible">미국에서 결혼한 후 한국에서 이혼소송 제기 가능한지요?</button>
-        <div class="resources-content">
+        <div class="content">
           <p class='resources-p'><b>질의:</b></p>
            <p class='resources-p'>
             저는 한국 국적의 여성입니다. 남편의 음주, 폭언 등의 문제로 별거를 한 이후 직장 관계로 제3국에서 거주하고 있습니다. 현재 미국인 남편이 미국에서 저를 상대로 이혼의 소송을 제기한 상태입니다. 저는 이와 별도로 한국에서 따로 이혼을 진행하고 싶습니다. 자녀는 미국에 있는 남편이 양육하고 있습니다. 과연 한국에서 제가 이혼 소송을 제기할 수 있을까요?
@@ -173,7 +173,7 @@
         </div>
 
         <button class="collapsible">한국에서 결혼한 후 미국에서 이혼 소송이 가능한지요?</button>
-        <div class="resources-content">
+        <div class="content">
           <p class='resources-p'><b>질의:</b></p>
            <p class='resources-p'>
             한국에서 15년 전 결혼하였으나, 남편과의 지속적인 불화를 겪어 별거를 하던 중 저만 미국으로 유학을 와서 현재 미국 영주권자 신분으로 있습니다. 한국 남편과의 혼인 관계를 청산하고 싶으나 남편이 반대하고 있습니다. 어떤 방법이 좋을까요?
@@ -189,7 +189,7 @@
         </div>
 
         <button class="collapsible">미국 시민권을 취득한 후 한국에서 이혼소송을 진행하려고 합니다. 가능한지요?</button>
-        <div class="resources-content">
+        <div class="content">
           <p class='resources-p'><b>질의:</b></p>
            <p class='resources-p'>
             지난 11월 시민권을 취득한 이후 아직까지 영사관에 한국국적 말소신청은 하지 않은 상태입니다.  30년전에 한국에서 결혼하고 혼인신고도 하였습니다. 현재 남편이 이혼소송을 진행시키려고 하는데 미국에는 집도 없고 나눌 재산도 없지만 한국에는 부동산이 있습니다. 이혼소송을 한국에서 진행시키고자 하는 데 가능한지요?
@@ -201,7 +201,7 @@
         </div>
 
         <button class="collapsible">부부가 모두 영주권자이고 합의이혼했습니다. 한국에 있는 호적을 어떻게 정리하면 되는 지요?</button>
-        <div class="resources-content">
+        <div class="content">
           <p class='resources-p'><b>질의:</b></p>
            <p class='resources-p'>
             두 사람 모두 영주권자이고 합의이혼했습니다. 이미 카운티판사로부터 이혼 판결서류도 받아놓은 상태입니다. 한국 호적을 어떻게 정리하면 되는 지요?
@@ -221,7 +221,7 @@
           <span class="card-title">세금 문제와 관련된 질문</span>
         </div>
         <button class="collapsible">한국에서 이미 납부한 증여세를 돌려받을 수 있을까요?</button>
-        <div class="resources-content">
+        <div class="content">
           <p class='resources-p'><b>질의:</b></p>
            <p class='resources-p'>
             저는 현재 미국 Atlanta에 거주하고 있습니다. 7년 전 아버님이 살아계실 때 서울에 있는 상가 건물을 증여 받았습니다. 이때 저는 대출까지 받아가며 증여세를 납부하였습니다. 그 후 아버님께서 돌아가시자 나머지 형제자매들이 저를 상대로 유류분 청구소송을 제기하는 바람에 상가건물에 관하여 지분이전 등기를 해 주어야 할 처지입니다. 저는 상가건물을 증여를 받아 금전적 손실도 적지 않습니다. 이미 낸 증여세를 돌려받을 수는 없을까요?
@@ -237,7 +237,7 @@
         </div>
 
         <button class="collapsible">1가구1주택의 세금혜택을 받을 수 있나요?</button>
-        <div class="resources-content">
+        <div class="content">
           <p class='resources-p'><b>질의:</b></p>
            <p class='resources-p'>
             저의 부부는 2012년 한국에서 아파트를 분양 받아 대금을 납입하여 오다가 2014년 미국으로 이민하여 콜로라도 주 덴버에서 거주하고 있습니다. 저희 부부의 아들 2명은 한국에 남아 있는 상황에서 저희 부부는 2015년 분양 잔금을 완납하고 위 아파트를 취득한 뒤 아들들이 이 아파트에서 거주하여 오다가 최근 미국으로 이민하여 왔습니다. 이에 이 아파트를 처분하려고 하는데 1가구1주택 비과세 혜택을 받을 수 있는지 궁금합니다.
@@ -260,7 +260,7 @@
           <span class="card-title">형사 사건과 관련된 문제</span>
         </div>
         <button class="collapsible">한국에서 기소중지된 상황입니다. 어떻게 하면 될까요?</button>
-        <div class="resources-content">
+        <div class="content">
           <p class='resources-p'><b>질의:</b></p>
            <p class='resources-p'>
             저희 부부는 함께 스타트 업 사업을 하던 중 2012. 9. 경 지인으로부터 투자금 명목으로 5000만 원을 받아 사용하였으나, 결국 부도가 발생하였습니다. 저희 부부는 위 투자금 중 일부를 지인에게 반환하다가 결국 2014. 1. 경 미국으로 이주하여 거주하고 있는 상태인데 최근 지인이 저희 부부를 사기 혐의로 고소하였음을 알게 되었습니다.  저희 부부는 이 문제로 상당한 정신적인 스트레스를 받고 있습니다. 방법이 없을까요?
@@ -276,7 +276,7 @@
         </div>
 
         <button class="collapsible">간이조사 방식이란 무엇인가요?</button>
-        <div class="resources-content">
+        <div class="content">
           <p class='resources-p'><b>질의:</b></p>
            <p class='resources-p'>
             저는 한국에서 학교 동창에게서 1000만 원을 빌렸다가 형사 고소를 당하여 현재 기소중지된 상태입니다. 그런데 이 문제로 한국까지 가서 조사를 받는다는 것이 부담스럽습니다. 간단히 사건을 해결할 방법이 없을까요?
@@ -297,7 +297,7 @@
           <span class="card-title">한국업체와 계약서 작성시 주의할 점에 관한 질문</span>
         </div>
           <button class="collapsible">저의 회사가 한국의 업체와 기술협력 계약을 체결하려고 합니다. 어떤 점에 유의하여야 할까요?</button>
-          <div class="resources-content">
+          <div class="content">
             <p class='resources-p'>
               계약서를 작성하는 이유는 당사자간의 의사와 의도를 명확히 하기 위하여 이를 문서화하는 작업입니다. 따라서, 당사자 사이에 후에 의사 해석에 문제가 없도록 가능한 한 명확하게 하는 것이 중요합니다. 특히, 한국어와 영어로 계약서를 작성할 경우 해석의 원칙이 되는 언어본을 정해 두어야 합니다(예컨대, “해석을 위해서는 영어본 계약서를 우선한다”는 취지의 규정). </p>
             <p class='resources-p'>
@@ -307,12 +307,12 @@
           </div>
 
           <button class="collapsible">계약서는 공증을 받아야 하나요?</button>
-          <div class="resources-content">
+          <div class="content">
             <p class='resources-p'>
             공증이라 함은 공증인의 자격을 갖춘 사람 앞에서 공증을 받고자 하는 사람의 진정한 의사로 공증할 내용이 분명하다는 점을 공식적으로 확인을 받아 놓는 것입니다. 계약을 공증을 받아 놓으면 사후에 계약의 당사자가 공증된 계약의 내용을 부인하는 것이 사실상 불가능해 질 것입니다. 돌이켜 보건대, 계약이란 당사자간의 의사나 의도를 명확히 하여 향후 분쟁을 방지하거나 분쟁 발생 후 해결을 위한 기준으로 삼기 위한 것입니다. 그런데, 내용이 불확실한 계약의 경우라면, 아무리 공증을 하더라도 당사자의 의사를 정확히 해석할 수 없다면 큰 의미가 있을 수 없습니다.  따라서, 공증을 받기 전에 계약의 내용이나 문구에 애매한 점이 없는지, 다른 의미로 해석될 여지가 없는지 등을 면밀히 살펴보는 것이 무엇보다도 중요합니다.</p>
           </div>
           <button class="collapsible">한국의 업체와 물품 수입계약을 체결하면서 계약서 초안을 작성하려 합니다. 저희는 영미식 계약서를 제시한 반면 한국측에서는 한국식 계약서를 제시하고 있습니다. 영미식 계약서와 한국식 계약서의 장단점이 무엇이 있나요?</button>
-            <div class="resources-content">
+            <div class="content">
               <p class='resources-p'>
                 한국식 계약서는 중요 부분에 집중하여 간략히 기재하는 것이 통상적입니다. 계약서에 기재하지 아니한 나머지 부분은 법의 규정이나 상관례에 의하는 방식입니다. 이에 반해, 영미식 계약서는 중요 부분은 물론이고 그에 부차적인 여러 상황을 일일이 규정하여 분쟁의 여지를 없애려는 데 집중합니다. 따라서, 의사해석의 면에 있어서 강점이 있습니다. 그러다 보니, 계약서 작성에 상상한 시간과 노력이 소요되기도 합니다.
               </p>
@@ -329,20 +329,20 @@
           <span class="card-title">변호사 선임 및 소송진행과 관련된 질문</span>
         </div>
           <button class="collapsible">한국에서 법적 문제가 발생하여 변호사의 조력을 받아야 할 상황입니다. 어떻게 변호사를 알아보고 소개를 받아야 할까요? </button>
-          <div class="resources-content">
+          <div class="content">
             <p class='resources-p'>
               우선, 한국의 지인을 통하여 소개를 받은 것이 가장 간명한 방법일 것입니다. 그러나, 소개 받은 변호사가 과연 귀하가 위임하려는 내용에 가장 적절한 전문가인지는 확인하기 어렵습니다. 저희 Law Office of Yoolhyun, Atlanta에서는 이러한 점을 살펴보고 상세한 정보를 제공드리고자 합니다. 또한 변호사에 대한 정보를 제공드린 후에도 이러한 미국에 있는 의뢰인과의 소통이 원활할 것인지(언어의 소통 문제), 수임료의 적정성 문제, 변론의 성실성과 법적 주장의 당부 등을 점검하고 확인하는 작업은 필수적입니다.
             </p>
           </div>
 
           <button class="collapsible">한국에 있는 변호사와의 의사 소통은 어떤 방식으로 하여야 하나요?</button>
-          <div class="resources-content">
+          <div class="content">
             <p class='resources-p'>
               변호사와 의뢰인의 가장 중요한 신뢰 구축 방안은 의사소통의 원활화입니다. 의뢰인은 변호사에게 모든 사항을 허심탄회하게 그리고 진실되게 알려 주어야 하고 변호사는 자신이 의뢰 받아 진행하는 사건에 대하여 성실하게 보고하고 의견을 들어야 합니다. 특히 변호사가 법원을 비롯한 기타 관공소를 상대로 제출하는 문서의 경우 의뢰인에게 그 내용을 알려 주고 의뢰인의 최종 확인(final confirmation)을 받도록 하여야 합니다. 그리고 수시로 진행상황을 의뢰인에게 보고하여야 합니다. 한국과 미국이라는 지역적 거리와 시간적 격차가 존재하더라도 SNS와 이 메일 등의 최첨단의 소통 방식을 적절히 이용한다면 큰 문제는 존재하지 않을 것입니다.
             </p>
           </div>
           <button class="collapsible">한국에서 소송을 제기할 경우 어떤 비용이 소요되는가요? 이들 비용은 승소 후 반환 받을 수 있나요?</button>
-            <div class="resources-content">
+            <div class="content">
               <p class='resources-p'>
                 한국에서 소송을 제기할 경우 변호사 비용(착수금 및 성공보수금), 인지대 및 송달료등의 비용 부담을 감안하셔야 합니다.
               </p>
@@ -358,6 +358,10 @@
           </div>
       </div>
     </div>
+
+    <ul>
+      <li></li>
+    </ul>
 
 
     {{!-- This is the container div tag --}}
