--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -68,7 +68,7 @@ main {
   margin-top: 3%;
   margin-bottom: auto;
   width: 100%;
-  height:100%;
+  height: 10em;
 }
 
 .overhead-image-contract {
@@ -76,7 +76,7 @@ main {
   margin-top: 3%;
   margin-bottom: auto;
   width: 100%;
-  height:400px;
+  height: 10em;
 }
 
 .overhead-image-resources {
@@ -84,13 +84,13 @@ main {
   margin-top: 3%;
   margin-bottom: auto;
   width: 100%;
-  height: 450px;
+  height: 10em;
 }
 
 .profile-image {
   margin-top: -30%;
-  width: 130%;
-  height: 130%;
+  width: 100%;
+  height: 100%;
 }
 
 .profile-image2 {
@@ -111,6 +111,12 @@ main {
   font-size: 1.3em;
   line-height: 2em;
   margin-bottom: 2em;
+}
+
+.main-text-seoul {
+  font-size: 1.3em;
+  line-height: 2em;
+  margin-bottom: 0.3em;
 }
 
 .resume-text {
