--- a/views/legal/contract.handlebars
+++ b/views/legal/contract.handlebars
@@ -48,9 +48,8 @@
           미국과 한국 사이에서 발생하는 수출입 등의 무역 분쟁, 투자계약으로 인한 분쟁, 상대국에서 발생하는 임대차로 인한 다툼 등이 주 대상이 됩니다.
           이 경우 어느 국가의 법으로 어느 곳에서 재판이
           진행되어야 하는 지 여부를 결정하여야 합니다.
-          주로 당사자 사이에 계약서를 체결하면서 분쟁 해결 조항을 두는 경우가 많고 이 경우 그 조항에 따라 분쟁 해결을 위한 준거법을 정하고 이에 따른 관할 법원이나 중재지를 정하기도 합니다.
-          그러나, 문제는 여기에서 끝나는 것이 아니라 한 국가에서 확정판결을 받거나 중재판정을 받더라도 다른 국가에서 집행을 하기 위해서는 다른 국가에서 정한 집행판결의 요건을 갖추어야 합니다.
-        </p>
+          주로 당사자 사이에 계약서를 체결하면서 분쟁 해결 조항을 두는 경우가 많고 이 경우 그 조항에 따라 분쟁 해결을 위한 준거법을 정하고 이에 따른 관할 법원이나 중재지를 정하기도 합니다.</p>
+         <p> 그러나, 문제는 여기에서 끝나는 것이 아니라 한 국가에서 확정판결을 받거나 중재판정을 받더라도 다른 국가에서 집행을 하기 위해서는 다른 국가에서 정한 집행판결의 요건을 갖추어야 합니다.</p>
       </div>
     </div>
   </div>
