--- a/views/legal/intro.handlebars
+++ b/views/legal/intro.handlebars
@@ -50,7 +50,8 @@
         <br><br><br><br>
         <p> 미국에 있는 교민들이 한국에서 처리하여야 할 법적 문제,
                       반대로 한국의 국민이 미국에서 처리하여야 할 법적 문제와 관련하여 과연 어느 나라의 법을 적용하고 어느 나라의 법정에서 해결하여야 하는 지에 대한 궁금증이 큽니다.
-                      이러한 문제들에 대해 조언을 주기 위하여는 현안이 된 국가들의 법과 제도, 판례의 태도를 확인할 수 있는 전문적인 지식과 경험이 절대적으로 필요합니다.
+                      이러한 문제들에 대해 조언을 주기 위하여는 현안이 된 국가들의 법과 제도, 판례의 태도를 확인할 수 있는 전문적인 지식과 경험이 절대적으로 필요합니다.</p>
+        <p>              
                       저는 한국변호사 자격증과 뉴욕 주 변호사 자격증을 모두 취득한 변호사로서 1991년부터 수많은 법률사건에 대해 개인과 기업체들에 대해 법률자문을 해오고 있습니다.
                       특히 한국 내에서 진행하거나 해결하여야 할 한국과 미국 사이의 개인과 회사간의 상거래 분쟁, 상속분쟁, 국적상실문제, 세금분쟁, 혼인과 이혼 등과 관련된 법률 문제에 대하여 최적화된 솔루션을 제공하고 있습니다.</p>
       </div>
