--- a/views/office/seoul.handlebars
+++ b/views/office/seoul.handlebars
@@ -41,10 +41,12 @@
 <main>
   <img src='/assets/images/Background/city_three.jpg' class='overhead-image' />
   <div class='main-content'>
+    <br><br><br>
     <h2>율현 서울사무소</h2>
-    <p class='main-text'>“법을 통하여 진리를 밝힌다(以律求賢)”는 이념 하에 항상 고객과 공감하고자 노력하는 Law Office of Yoolhyun, Seoul은 2005년 서울에서 윤배경
-      변호사를 대표변호사로 하여 설립된 Law Firm입니다.<br>
-      민/형사와 같은 일반 사건을 처리하고 있음은 물론이고 금융, 조세, 건설, 해상보험과 같은 전문적인 영역에도 탁월한 지식과 다양한 경험을 바탕으로 법률자문을 수행하고 있습니다.
+    <p class='main-text-seoul'>“법을 통하여 진리를 밝힌다(以律求賢)”는 이념 하에 항상 고객과 공감하고자 노력하는 Law Office of Yoolhyun, Seoul은 2005년 서울에서 윤배경
+      변호사를 </p>
+      <p class='main-text-seoul'>대표변호사로 하여 설립된 Law Firm입니다.</p>
+      <p class='main-text-seoul'>민/형사와 같은 일반 사건을 처리하고 있음은 물론이고 금융, 조세, 건설, 해상보험과 같은 전문적인 영역에도 탁월한 지식과 다양한 경험을 바탕으로 법률자문을 수행하고 있습니다.</p>
       <br>
       <a href='http://yoolhyun.com/' target='_blank' rel="noopener noreferrer">(www.yoolhyun.com) </a>
     </p>
@@ -60,7 +62,6 @@
       </div>
       <div class="col s5">
         <h5 class="white-text"><a class="grey-text" href="#!">Contact</a></h5>
-
       </div>
       <div class="col s2">
         <h5 class="white-text"><a class="grey-text" href="#!">Resources</a></h5>
