--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10,6 +10,11 @@
   background-color: #BEBEBE;
 }
 
+.nav-space {
+  margin-top: -1em;
+  margin-bottom: -2em;
+}
+
 nav ul li a{
   color: white;
 }  
