--- a/views/consultation.handlebars
+++ b/views/consultation.handlebars
@@ -21,11 +21,22 @@
         <div class='navbar-right'>
           <ul class="right hide-on-med-and-down">
             <li><a href="/" class='title'>Home</a></li>
-            <li><a class="dropdown-trigger" data-target="dropdown1">법률사무소 Law Office</a></li>
-            <li><a href="/about" class='title'>윤배경변호사 Lawyer Yoon</a></li>
-            <li><a class="dropdown-trigger" data-target="dropdown2">업무분야 Practice Areas</a></li>
-            <li><a href="/resources" class='title'>법률자료실 Resources</a></li>
-            <li><a href="/consultation" class='title'>상담 및 의뢰Consultation</a></li>
+            <li><a class="dropdown-trigger" data-target="dropdown1">
+                <div class='nav-space'>법률사무소</div>
+                Law Office
+              </a></li>
+            <li><a href="/about" class='title'>
+                <div class='nav-space'>윤배경변호사</div>Lawyer Yoon
+              </a></li>
+            <li><a class="dropdown-trigger" data-target="dropdown2">
+                <div class='nav-space'>업무분야</div>Practice Areas
+              </a></li>
+            <li><a href="/resources" class='title'>
+                <div class='nav-space'>법률자료실</div>Resources
+              </a></li>
+            <li><a href="/consultation" class='title'>
+                <div class='nav-space'>상담 및 의뢰</div>Consultation
+              </a></li>
           </ul>
           <ul id="nav-mobile" class="sidenav">
             <li><a href="#">Navbar Link</a></li>
@@ -42,43 +53,55 @@
   <br><br><br><br>
   <div class="container">
     <div class="row">
-        <div class="col m10 offset-m1 s12">
-            <h2 class="center-align">For Consultation</h2>
+      <div class="col m10 offset-m1 s12">
+        <h2 class="center-align">For Consultation</h2>
+        <div class="row">
+          <form class="col s12" action='/consultation' method='post'>
             <div class="row">
-                <form class="col s12" action='/consultation' method='post'>
-                    <div class="row">
-                        <div class="input-field col m6 s12">
-                            <input id="first_name" type="text" class="validate">
-                            <label for="first_name">First Name</label>
-                        </div>
-                        <div class="input-field col m6 s12">
-                            <input id="last_name" type="text" class="validate">
-                            <label for="last_name">Last Name</label>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <i class="mdi-content-mail prefix"></i>
-                            <input id="email" type="email" class="validate" required>
-                            <label for="email">Email</label>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s12">
-                          <textarea id="message" class="materialize-textarea"></textarea>
-                          <label for="message">Message</label>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col m12">
-                         <p class="right-align emailSubmit"><button class="btn btn-large waves-effect waves-light" type="button" name="action">Send Message</button></p>
-                        </div>
-                    </div>
-                </form>
+              <div class="input-field col m6 s12">
+                <input id="first_name" type="text" class="validate">
+                <label for="first_name">First Name</label>
+              </div>
+              <div class="input-field col m6 s12">
+                <input id="last_name" type="text" class="validate">
+                <label for="last_name">Last Name</label>
+              </div>
             </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <i class="mdi-content-mail prefix"></i>
+                <input id="email" type="email" class="validate" required>
+                <label for="email">Email</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <textarea id="message" class="materialize-textarea"></textarea>
+                <label for="message">Message</label>
+              </div>
+            </div>
+            <form action="#">
+              <div class="file-field input-field">
+                <div class="btn">
+                  <span>File</span>
+                  <input type="file" multiple>
+                </div>
+                <div class="file-path-wrapper">
+                  <input class="file-path validate" type="text" placeholder="Upload one or more files">
+                </div>
+              </div>
+            </form>
+            <div class="row">
+              <div class="col m12">
+                <p class="right-align emailSubmit"><button class="btn btn-large waves-effect waves-light" type="button"
+                    name="action">Send Message</button></p>
+              </div>
+            </div>
+          </form>
         </div>
+      </div>
     </div>
-</div>
+  </div>
 </main>
 
 {{!-- Footer --}}
