--- a/views/legal/criminal.handlebars
+++ b/views/legal/criminal.handlebars
@@ -7,7 +7,7 @@
         <li><a class='white-text' href="/seoul">율현 서울사무소</a></li>
         <li><a class='white-text' href="/atlanta">율현 아틀란타 사무소</a></li>
       </ul>
-      <!-- Dropdown Structure -->
+            <!-- Dropdown Structure -->
       <ul id="dropdown2" class="dropdown-content #757575 grey darken-1">
         <li><a class='white-text' href="/intro">Intro</a></li>
         <li><a class='white-text' href="/contract">Contract</a></li>
@@ -21,11 +21,13 @@
         <div class='navbar-right'>
           <ul class="right hide-on-med-and-down">
             <li><a href="/" class='title'>Home</a></li>
-            <li><a class="dropdown-trigger" data-target="dropdown1">법률사무소 Law Office</a></li>
-            <li><a href="/about" class='title'>윤배경변호사 Lawyer Yoon</a></li>
-            <li><a class="dropdown-trigger" data-target="dropdown2">업무분야 Practice Areas</a></li>
-            <li><a href="/resources" class='title'>법률자료실 Resources</a></li>
-            <li><a href="/consultation" class='title'>상담 및 의뢰Consultation</a></li>
+            <li><a class="dropdown-trigger" data-target="dropdown1"><div class='nav-space'>법률사무소</div> 
+            Law Office
+            </a></li>
+            <li><a href="/about" class='title'><div class='nav-space'>윤배경변호사</div>Lawyer Yoon</a></li>
+            <li><a class="dropdown-trigger" data-target="dropdown2"><div class='nav-space'>업무분야</div>Practice Areas</a></li>
+            <li><a href="/resources" class='title'><div class='nav-space'>법률자료실</div>Resources</a></li>
+            <li><a href="/consultation" class='title'><div class='nav-space'>상담 및 의뢰</div>Consultation</a></li>
           </ul>
           <ul id="nav-mobile" class="sidenav">
             <li><a href="#">Navbar Link</a></li>
@@ -36,7 +38,6 @@
     </nav>
   </div>
 </header>
-
 {{!-- Main body Content Wrapped in Carousel --}}
 <main>
   <img src='/assets/images/Background/city_two.jpg' class='overhead-image-contract' />
