--- a/views/consultation.handlebars
+++ b/views/consultation.handlebars
@@ -52,19 +52,19 @@
 <main>
   <br><br><br><br>
   <div class="container">
+    <div class='row'>
+      <p>tel: +1 (404) 719-9824</p>
+      <p>yoolhyunlaw@gmail.com</p>
+    </div>
     <div class="row">
       <div class="col m10 offset-m1 s12">
         <h2 class="center-align">For Consultation</h2>
         <div class="row">
           <form class="col s12" action='/consultation' method='post'>
             <div class="row">
-              <div class="input-field col m6 s12">
+              <div class='col s4'>First Name</div>
+              <div class="input-field col s8">
                 <input id="first_name" type="text" class="validate">
-                <label for="first_name">First Name</label>
-              </div>
-              <div class="input-field col m6 s12">
-                <input id="last_name" type="text" class="validate">
-                <label for="last_name">Last Name</label>
               </div>
             </div>
             <div class="row">
@@ -105,7 +105,7 @@
 </main>
 
 {{!-- Footer --}}
-<footer class="page-footer #757575 grey darken-1">
+<footer class="page-footer #757575 grey darken-1 footer-size">
   <div class="container">
     <div class="row">
       <div class="col s5">
@@ -119,10 +119,8 @@
         <h5 class="white-text"><a class="grey-text" href="#!">Resources</a></h5>
       </div>
     </div>
-  </div>
-  <div class="footer-copyright #757575 grey darken-1">
     <div class="container center white-text">
-      copyright ⓒ Law Firm of Yoolhyun | Tel: +1 (404) 719 9824 | Email: juhuyoon@yahoo.com
+      copyright ⓒ Law Firm of Yoolhyun | Tel: +1 (404) 719 9824 | Email: yoolhyunlaw@gmail.com
     </div>
   </div>
 </footer>
