--- a/views/legal/family.handlebars
+++ b/views/legal/family.handlebars
@@ -59,7 +59,7 @@
 </main>
 
 {{!-- Footer --}}
-<footer class="page-footer #757575 grey darken-1">
+<footer class="page-footer #757575 grey darken-1 footer-size">
   <div class="container">
     <div class="row">
       <div class="col s5">
@@ -73,10 +73,8 @@
         <h5 class="white-text"><a class="grey-text" href="#!">Resources</a></h5>
       </div>
     </div>
-  </div>
-  <div class="footer-copyright #757575 grey darken-1">
     <div class="container center white-text">
-      copyright ⓒ Law Firm of Yoolhyun | Tel: +1 (404) 719 9824 | Email: juhuyoon@yahoo.com
+      copyright ⓒ Law Firm of Yoolhyun | Tel: +1 (404) 719 9824 | Email: yoolhyunlaw@gmail.com
     </div>
   </div>
 </footer>
