--- a/views/office/atlanta.handlebars
+++ b/views/office/atlanta.handlebars
@@ -41,7 +41,7 @@
 
 {{!-- Main body Content Wrapped in Carousel --}}
 <main>
-  <img src='/assets/images/Background/city_five.jpg' class='overhead-image' />
+  <img src='/assets/images/Background/atlanta.jpg' class='overhead-image' />
   <div class='main-content'>
     <h2>율현 아틀란타 사무소</h2>
     <p class='main-text'>
@@ -53,7 +53,7 @@
 </main>
 
 {{!-- Footer --}}
-<footer class="page-footer #757575 grey darken-1">
+<footer class="page-footer #757575 grey darken-1 footer-size">
   <div class="container">
     <div class="row">
       <div class="col s5">
@@ -67,10 +67,8 @@
         <h5 class="white-text"><a class="grey-text" href="#!">Resources</a></h5>
       </div>
     </div>
-  </div>
-  <div class="footer-copyright #757575 grey darken-1">
     <div class="container center white-text">
-      copyright ⓒ Law Firm of Yoolhyun | Tel: +1 (404) 719 9824 | Email: juhuyoon@yahoo.com
+      copyright ⓒ Law Firm of Yoolhyun | Tel: +1 (404) 719 9824 | Email: yoolhyunlaw@gmail.com
     </div>
   </div>
 </footer>
