--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -183,3 +183,66 @@ main {
   padding-left: 1.5em;
   line-height: 1.6
 }
+
+
+/* 
+* -- Consultation Content -- 
+*/
+
+.consult {
+  font-size: 1.5em;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  sans-serif;
+}
+
+.consult_table {
+  margin-top: 5%;
+  font-size: 1.2em;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  sans-serif;
+}
+
+.consult_box {
+  margin-top: 3%;
+  width: 100%;
+  box-sizing: border-box;
+  height: 60px;
+  border: 2px solid #999;
+  padding: 0 1%;
+  font-size: 15px;
+  color: black;
+  font-family: notokr-regular,Noto Sans CJK KR DemiLight;
+}
+
+.consult_textarea {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  border: 2px solid #999;
+  font-size: 15px;
+  color: black;
+  font-family: notokr-regular,Noto Sans CJK KR DemiLight;
+}
+
+.submitBtn {
+  background-color: white;
+  color: black;
+}
+
+.submitBtn:hover {
+  background-color: #BEBEBE;
+}
+
+#files {
+  margin-top: 3%
+}
+
+.consultBtn {
+  background-color: #999;
+}
+
+.consultBtn:hover {
+  background-color: #BEBEBE;
+}
